# .github

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MISSION.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-auto-merge.yml
config/: settings.py
defaults/: .hadolint.yaml  .mdformat.toml  .yamllint  README.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  GOVERNANCE.md  LICENSING.md  PROJECT.md  ROADMAP.md  SECURITY.md
docs/agent/: GOALS.md  LAWS.md  PROMPT.md  TOOLS.md
docs/agent/instruct/: EMBEDDING_PROMPT.md  TOOL_PROMPT.md  VISION_PROMPT.md
profile/: ABOUT.md  MISSION.md  PROFILE.md  README.md
site/: tests_missing.json
src/: .gitignore  tests_missing.json
src/brainxio/: errors.py
src/brainxio/core/: commands.py  main.py
src/brainxio/utils/: cache.py  config.py  logging.py  tasks.py
tests/: test_brainxio.py
tests/core/: test_commands.py  test_main.py
tests/utils/: test_cache.py  test_config.py  test_logging.py  test_tasks.py
