[project]
name = "brainxio"
version = "0.1.0"
description = "A modular Python CLI for automation and AI-driven tasks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "The Unlicense"}
dependencies = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "typeguard==4.3.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2"
]

[tool.poetry]
name = "brainxio"
version = "0.1.0"
description = "A modular Python CLI for automation and AI-driven tasks"
readme = "README.md"
license = "Unlicense"
authors = ["BrainXio <github@brain-x.io>"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "8.3.2"
pytest-cov = "5.0.0"
typeguard = "4.3.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=src/brainxio --cov-report=term-missing"

[tool.coverage.run]
source = ["src/brainxio"]
omit = ["*/__init__.py"]
